Login concept done

--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -7,27 +7,32 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="http://v4-alpha.getbootstrap.com/favicon.ico">
+    <link rel="icon" href="">
 
-    <title>Jumbotron Template for Bootstrap</title>
+    <title>MeTube</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom CSS :) -->
+    <link href="../css/styles.css" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script:400,700" rel="stylesheet">
 
 </head>
 
-<body>
+<body> <!-- style="font-family: sans-serif; "> -->
 
 <nav class="navbar navbar-inverse navbar-static-top">
-    <a class="navbar-brand text-success" href="#">MeTube</a>
+    <a class="navbar-brand text-success content-header-logo" href="#">MeTube</a>
 
     <form class="mx-2 my-auto d-inline w-50">
         <div class="input-group">
             <input type="text" class="form-control" placeholder="imt2631..">
             <span class="input-group-btn">
-       <button class="btn btn-outline-success" type="button">GO</button>
-       </span>
+                <button class="btn btn-outline-success ml-lg-1" type="button">GO</button>
+            </span>
         </div>
     </form>
 
@@ -43,36 +48,41 @@
     <div class="container">
         <h1>Holy fucking shit you need to register mate!</h1>
         <p>Smash this button and get to it.</p>
-        <p><a class="btn btn-success btn-lg" href="#" role="button">Register »</a></p>
+        <p><a class="btn btn-success btn-lg" href="login.html" role="button">Register »</a></p>
     </div>
 </div>
 
 <div class="container">
+
+    <div class="col-12 ml-lg-0">
+        <h1 class="display-4">New Videos</h1>
+    </div>
+
     <!-- Example row of columns -->
-    <div class="row">
+    <div class="row my-md-1">
         <div class="col-md-4">
-            <h2>Video 1</h2>
-            <img src="../thumbnail/test.jpg" class="img-thumbnail">
+            <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
+            <img src="../thumbnail/test.jpg" class="img-thumbnail border-success">
         </div>
         <div class="col-md-4">
-            <h2>Video 2</h2>
-            <img src="../thumbnail/test.jpg" class="img-thumbnail">
+            <h2 class="lead text-limit">Video 2</h2>
+            <img src="../thumbnail/test.jpg" class="img-thumbnail border-success">
         </div>
         <div class="col-md-4">
-            <h2>Video 3</h2>
-            <img src="../thumbnail/test.jpg" class="img-thumbnail">
+            <h2 class="lead text-limit">Video 3</h2>
+            <img src="../thumbnail/test.jpg" class="img-thumbnail border-success">
         </div>
         <div class="col-md-4">
-            <h2>Video 4</h2>
-            <img src="../thumbnail/test.jpg" class="img-thumbnail">
+            <h2 class="lead text-limit">Video 4</h2>
+            <img src="../thumbnail/test.jpg" class="img-thumbnail border-success">
         </div>
         <div class="col-md-4">
-            <h2>Video 5</h2>
-            <img src="../thumbnail/test.jpg" class="img-thumbnail">
+            <h2 class="lead text-limit">Video 5</h2>
+            <img src="../thumbnail/test.jpg" class="img-thumbnail border-success">
         </div>
         <div class="col-md-4">
-            <h2>Video 6</h2>
-            <img src="../thumbnail/test.jpg" class="img-thumbnail">
+            <h2 class="lead text-limit">Video 6</h2>
+            <img src="../thumbnail/test.jpg" class="img-thumbnail border-success">
         </div>
     </div>
 
