--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
     <title>Sign in - MeTube</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/twbs/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS :) -->
     <link href="../css/styles.css" rel="stylesheet">
@@ -30,7 +30,7 @@
 
 
 <div class="text-center text-white">
-    <h1 class="display-2"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">MeTube</span></h1>
+    <h1 class="display-2"><span class="content-header wow fadeIn " data-wow-delay="0.2s" data-wow-duration="2s">#MeToobe</span></h1>
 </div>
 
 
