--- a/templates/video.html
+++ b/templates/video.html
@@ -12,7 +12,7 @@
     <title>MeTube</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendor/twbs/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
     <!-- Custom CSS :) -->
     <link href="../css/styles.css" rel="stylesheet">
@@ -25,7 +25,7 @@
 <body> <!-- style="font-family: sans-serif; "> -->
 
 <nav class="navbar navbar-inverse navbar-static-top">
-    <a class="navbar-brand text-success content-header-logo" href="#">MeTube</a>
+    <a class="navbar-brand text-success content-header-logo" href="#">#MeTube</a>
 
     <form class="mx-2 my-auto d-inline w-50">
         <div class="input-group">
@@ -44,11 +44,11 @@
 </nav>
 
 <!-- Main jumbotron -->
-<div class="jumbotron">
+<div class="jumbotron" id="jumbo">
     <div class="container">
-        <h1>Holy fucking shit you need to register mate!</h1>
-        <p>Smash this button and get to it.</p>
-        <p><a class="btn btn-success btn-lg" href="login.html" role="button">Register »</a></p>
+        <video width="100%" height="100%" controls>
+            <source src="../movies/test.MP4" type="video/mp4">
+        </video>
     </div>
 </div>
 
